--- a/languages/gcat-ru_RU.po
+++ b/languages/gcat-ru_RU.po
@@ -1,31 +1,99 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Goods Catalog\n"
-"POT-Creation-Date: 2014-03-29 21:32+0600\n"
-"PO-Revision-Date: 2014-03-29 21:32+0600\n"
-"Last-Translator: Irina Sokolovskaya <sokolovskaja.irina@gmail.com>\n"
+"POT-Creation-Date: 2015-01-03 23:49+0300\n"
+"PO-Revision-Date: 2015-01-03 23:50+0300\n"
+"Last-Translator: Irina Sokolovskaja <sokolovskaja.irina@gmail.com>\n"
 "Language-Team: \n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.6.4\n"
+"X-Generator: Poedit 1.5.4\n"
 "X-Poedit-Basepath: .\n"
 "Plural-Forms: nplurals=2; plural=n != 1;\n"
 "X-Poedit-KeywordsList: __;_n;_x;_e;_ex\n"
 "X-Poedit-SearchPath-0: ..\n"
 
-#: ../inc/breadcrumbs.php:17
+#: ../inc/widgets.php:21
+msgid "Goods Catalog categories list"
+msgstr "Список рубрик каталога товаров"
+
+#: ../inc/widgets.php:62
+msgid "Products Categories"
+msgstr "Рубрики продуктов"
+
+#: ../inc/widgets.php:70 ../inc/widgets.php:148
+msgid "Title:"
+msgstr "Заголовок:"
+
+#: ../inc/widgets.php:107
+msgid "Goods Catalog tags cloud"
+msgstr "Облако тегов каталога товаров"
+
+#: ../inc/widgets.php:140
+msgid "Products Tags"
+msgstr "Метки продуктов"
+
+#: ../inc/breadcrumbs.php:16
 msgid "Caught exception: "
 msgstr "Внимание:"
 
-#: ../inc/breadcrumbs.php:45
+#: ../inc/breadcrumbs.php:48
 msgid "Home"
 msgstr "Главная"
 
-#: ../inc/breadcrumbs.php:50 ../inc/breadcrumbs.php:56
+#: ../inc/breadcrumbs.php:53 ../inc/breadcrumbs.php:59
 msgid "Catalog"
 msgstr "Каталог"
+
+#: ../inc/post-type.php:15
+msgid "Goods"
+msgstr "Товары"
+
+#: ../inc/post-type.php:16
+msgid "Item"
+msgstr "Товар"
+
+#: ../inc/post-type.php:17
+msgid "Add"
+msgstr "Добавить"
+
+#: ../inc/post-type.php:18
+msgid "Add new item"
+msgstr "Добавить новый товар"
+
+#: ../inc/post-type.php:19
+msgid "Edit"
+msgstr "Редактировать"
+
+#: ../inc/post-type.php:20
+msgid "Edit item"
+msgstr "Редактировать товар"
+
+#: ../inc/post-type.php:21
+msgid "New item"
+msgstr "Новый товар"
+
+#: ../inc/post-type.php:22
+msgid "View"
+msgstr "Вид"
+
+#: ../inc/post-type.php:23
+msgid "View of items"
+msgstr "Вид товаров"
+
+#: ../inc/post-type.php:24
+msgid "Search items"
+msgstr "Поиск"
+
+#: ../inc/post-type.php:25
+msgid "Items not found"
+msgstr "Не найдено"
+
+#: ../inc/post-type.php:26
+msgid "Item is not found in trash"
+msgstr "В корзине товаров не найдено"
 
 #: ../inc/functions.php:62
 msgid "Categories:&nbsp;"
@@ -35,13 +103,97 @@ msgstr "Рубрики:&nbsp;"
 msgid "Tags:&nbsp;"
 msgstr "Метки:&nbsp;"
 
-#: ../inc/functions.php:90
+#: ../inc/functions.php:90 ../inc/functions.php:177
 msgid "Price:"
 msgstr "Цена:"
 
 #: ../inc/functions.php:103
 msgid "SKU:"
 msgstr "Артикул:"
+
+#: ../inc/shortcodes.php:122
+msgid "Read more"
+msgstr "Далее"
+
+#: ../inc/sidebar.php:12
+msgid "Goods Catalog Sidebar"
+msgstr "Сайдбар каталога товаров"
+
+#: ../inc/sidebar.php:13
+msgid "Goods Catalog Widgets"
+msgstr "Виджеты каталога товаров"
+
+#: ../inc/pagination.php:20
+msgid "Pages:"
+msgstr "Страницы:"
+
+#: ../inc/taxonomy-category.php:17
+msgid "Goods Categories"
+msgstr "Рубрики продуктов"
+
+#: ../inc/taxonomy-category.php:18
+msgid "Add category"
+msgstr "Добавить рубрику"
+
+#: ../inc/taxonomy-category.php:19
+msgid "New category"
+msgstr "Новая рубрика"
+
+#: ../inc/taxonomy-tag.php:15
+msgid "Goods Tags"
+msgstr "Метки продуктов"
+
+#: ../inc/taxonomy-tag.php:16
+msgid "Tags"
+msgstr "Метки"
+
+#: ../inc/taxonomy-tag.php:17
+msgid "All Items"
+msgstr "Все "
+
+#: ../inc/taxonomy-tag.php:18
+msgid "Parent Item"
+msgstr "Родительский элемент"
+
+#: ../inc/taxonomy-tag.php:19
+msgid "Parent Item:"
+msgstr "Родительский элемент"
+
+#: ../inc/taxonomy-tag.php:20
+msgid "New Item Name"
+msgstr "Название"
+
+#: ../inc/taxonomy-tag.php:21
+msgid "Add New Item"
+msgstr "Добавить"
+
+#: ../inc/taxonomy-tag.php:22
+msgid "Edit Item"
+msgstr "Редактировать"
+
+#: ../inc/taxonomy-tag.php:23
+msgid "Update Item"
+msgstr "Обновить"
+
+#: ../inc/taxonomy-tag.php:24
+msgid "Separate items with commas"
+msgstr "Разделяйте метки запятыми"
+
+#: ../inc/taxonomy-tag.php:25
+msgid "Search Items"
+msgstr "Поиск"
+
+#: ../inc/taxonomy-tag.php:26
+msgid "Add or remove items"
+msgstr "Добавить или удалить"
+
+#: ../inc/taxonomy-tag.php:27
+msgid "Choose from the most used items"
+msgstr "Выбрать из часто используемых"
+
+#: ../inc/taxonomy-tag.php:28
+msgid "Not Found"
+msgstr "Не найдено"
 
 #: ../inc/goods-options.php:27
 msgid "Goods Catalog Settings"
@@ -339,154 +491,13 @@ msgstr "Короткое описание"
 msgid "Enter description here"
 msgstr "Введите описание"
 
-#: ../inc/pagination.php:20
-msgid "Pages:"
-msgstr "Страницы:"
-
-#: ../inc/post-type.php:15
-msgid "Goods"
-msgstr "Товары"
-
-#: ../inc/post-type.php:16
-msgid "Item"
-msgstr "Товар"
-
-#: ../inc/post-type.php:17
-msgid "Add"
-msgstr "Добавить"
-
-#: ../inc/post-type.php:18
-msgid "Add new item"
-msgstr "Добавить новый товар"
-
-#: ../inc/post-type.php:19
-msgid "Edit"
-msgstr "Редактировать"
-
-#: ../inc/post-type.php:20
-msgid "Edit item"
-msgstr "Редактировать товар"
-
-#: ../inc/post-type.php:21
-msgid "New item"
-msgstr "Новый товар"
-
-#: ../inc/post-type.php:22
-msgid "View"
-msgstr "Вид"
-
-#: ../inc/post-type.php:23
-msgid "View of items"
-msgstr "Вид товаров"
-
-#: ../inc/post-type.php:24
-msgid "Search items"
-msgstr "Поиск"
-
-#: ../inc/post-type.php:25
-msgid "Items not found"
-msgstr "Не найдено"
-
-#: ../inc/post-type.php:26
-msgid "Item is not found in trash"
-msgstr "В корзине товаров не найдено"
-
-#: ../inc/sidebar.php:12
-msgid "Goods Catalog Sidebar"
-msgstr "Сайдбар каталога товаров"
-
-#: ../inc/sidebar.php:13
-msgid "Goods Catalog Widgets"
-msgstr "Виджеты каталога товаров"
-
-#: ../inc/taxonomy-category.php:17
-msgid "Categories"
-msgstr "Рубрики"
-
-#: ../inc/taxonomy-category.php:18
-msgid "Add category"
-msgstr "Добавить рубрику"
-
-#: ../inc/taxonomy-category.php:19
-msgid "New category"
-msgstr "Новая рубрика"
-
-#: ../inc/taxonomy-tag.php:15 ../inc/taxonomy-tag.php:16
-msgid "Tags"
-msgstr "Метки"
-
-#: ../inc/taxonomy-tag.php:17
-msgid "All Items"
-msgstr "Все "
-
-#: ../inc/taxonomy-tag.php:18
-msgid "Parent Item"
-msgstr "Родительский элемент"
-
-#: ../inc/taxonomy-tag.php:19
-msgid "Parent Item:"
-msgstr "Родительский элемент"
-
-#: ../inc/taxonomy-tag.php:20
-msgid "New Item Name"
-msgstr "Название"
-
-#: ../inc/taxonomy-tag.php:21
-msgid "Add New Item"
-msgstr "Добавить"
-
-#: ../inc/taxonomy-tag.php:22
-msgid "Edit Item"
-msgstr "Редактировать"
-
-#: ../inc/taxonomy-tag.php:23
-msgid "Update Item"
-msgstr "Обновить"
-
-#: ../inc/taxonomy-tag.php:24
-msgid "Separate items with commas"
-msgstr "Разделяйте метки запятыми"
-
-#: ../inc/taxonomy-tag.php:25
-msgid "Search Items"
-msgstr "Поиск"
-
-#: ../inc/taxonomy-tag.php:26
-msgid "Add or remove items"
-msgstr "Добавить или удалить"
-
-#: ../inc/taxonomy-tag.php:27
-msgid "Choose from the most used items"
-msgstr "Выбрать из часто используемых"
-
-#: ../inc/taxonomy-tag.php:28
-msgid "Not Found"
-msgstr "Не найдено"
-
-#: ../inc/widgets.php:21
-msgid "Goods Catalog categories list"
-msgstr "Список рубрик каталога товаров"
-
-#: ../inc/widgets.php:62
-msgid "Products Categories"
-msgstr "Рубрики продуктов"
-
-#: ../inc/widgets.php:70 ../inc/widgets.php:148
-msgid "Title:"
-msgstr "Заголовок:"
-
-#: ../inc/widgets.php:107
-msgid "Goods Catalog tags cloud"
-msgstr "Облако тегов каталога товаров"
-
-#: ../inc/widgets.php:140
-msgid "Products Tags"
-msgstr "Метки продуктов"
-
 #: ../templates/content-goods_category.php:18
 #, php-format
 msgid "Go to cetegory %s"
 msgstr "Перейти в рубрику  %s"
+
+#~ msgid "Categories"
+#~ msgstr "Рубрики"
 
 #~ msgid ""
 #~ "You can change the default prefix for the catagories of products. Please "
