--- a/languages/goods-catalog-es_ES.po
+++ b/languages/goods-catalog-es_ES.po
@@ -181,8 +181,8 @@ msgstr ""
 "\"%s\">Enlaces permanentes</a>, y  posiblemente actualizar el item en el menú"
 
 #: ../inc/goods-options.php:326
-msgid " by default: goods_caregory"
-msgstr "por defecto: goods_caregory"
+msgid " by default: goods_category"
+msgstr "por defecto: goods_category"
 
 #: ../inc/goods-options.php:329
 #, php-format
